# rmse

./: README.md  basic_log.txt  best_cont_log.txt  easy_backfill_log.txt  flake.nix  force_cont_log.txt  gantt.py  meson.build  read_res.py  run  run.sh  runV2.sh
assets/: 2machine.xml  4machine.xml  5jobs.json  6jobs.json  best_contigous.json  non_contigous.json
assets/guide/: implemementation_plan.md
assets/test/: jobs_10.json  jobs_100.json  jobs_1000.json  jobs_20.json  machines_10.xml  machines_20.xml  machines_3.xml  machines_5.xml
res/: ref.txt
res/backfill/: basic_temp.txt  best_cont_temp.txt  easy_backfill_temp.txt  force_cont_temp.txt
res/basic/: basic_performance_summary.txt
res/basic_1000_5/: basic_performance_summary.txt
res/best_cont/: best_cont_performance_summary.txt
res/easy_backfill_10_5/: easy_backfill_performance_summary.txt
res/force_cont/: force_cont_performance_summary.txt
res/force_cont_1000_5/: force_cont_performance_summary.txt
res/makespan/: basic_temp.txt  best_cont_temp.txt  easy_backfill_temp.txt  force_cont_temp.txt
res/res_makespan/: basic_temp.txt  best_cont_temp.txt  force_cont_temp.txt
scripts/: analyze_results.py  analyze_scheduler_performance.py  backfill.py  generate_jobs.py  generate_machines.py  makespan.py  plot_makespan.py  run_backfill_comparison.sh
src/: basic.cpp  best_cont.cpp  easy_backfill.cpp  fcfs.cpp  force_cont.cpp
